--- a/public/index.html
+++ b/public/index.html
@@ -1,49 +1,68 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Netlify example: Serverless functions</title>
-    <link rel="stylesheet" href="/css/styles.css" />
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>limegle</title>
+  <link rel="stylesheet" href="/styles.css" />
 </head>
-
 <body>
-    <div class="container">
-        <h1>Example: Hello Netlify Functions</h1>
-        <p>
-            A hello world example of using Netlify Functions to add serverless functions to your project.
-        </p>
-        <p>
-            To add Netlify Functions, create a JavaScript, TypeScript, or Go function to your project in a <code>netlify/functions</code> directory. You can customize the address for your functions using Netlify's Redirects API
-        </p>
-        <h2>Examples</h2>
-        <ul>
-            <li><a href="/.netlify/functions/hello?name=you">Hello World</a> ( /.netlify/functions/hello?name=you )</li>
-            <li><a href="/api/hello?name=you">Hello World</a> ( /api/hello?name=you )</li>
-        </ul>
-
-
-        <h2>More information</h2>
-        <ul>
-            <li><a href="https://www.netlify.com/products/functions/?utm_campaign=dx-examples&utm_source=example-site&utm_medium=web&utm_content=example-hello-functions">About Netlify Functions</a></li>
-            <li><a href="https://docs.netlify.com/functions/overview/?utm_campaign=dx-examples&utm_source=example-site&utm_medium=web&utm_content=example-hello-functions">Docs: Netlify Functions</a></li>
-            <li><a href="https://docs.netlify.com/functions/logs/?utm_campaign=dx-examples&utm_source=example-site&utm_medium=web&utm_content=example-hello-functions">Accessing your function logs</a></li>
-            <li><a href="https://functions.netlify.com/?utm_campaign=dx-examples&utm_source=example-site&utm_medium=web&utm_content=example-hello-functions">Learn serverless in the functions playground</a></li>
-        </ul>
-
-        <h2>Deploy your own</h2>
-        <p>
-            A great place to start is to clone and deploy your own copy of this example. You can do that by clicking the button below.
-        </p>
-        <p>
-            Try it! 👉
-            <a href="https://app.netlify.com/start/deploy?repository=https://github.com/netlify/example-hello-world-functions&utm_campaign=dx-examples"><img src="https://www.netlify.com/img/deploy/button.svg" class="dtn" alt="Deploy to Netlify"></a>
-        </p>
-
-        <p><small>Clicking the button will clone <a href="https://github.com/netlify/example-hello-world-functions">this repo</a> and deploy it as a new site on <a href="https://netlify.com/?utm_campaign=dx-examples">Netlify</a></small></p>
+  <header class="topbar">
+    <div class="left-actions">
+      <button id="callBtn" class="btn btn-accent">Call</button>
+      <button id="helpBtn" class="btn btn-warn" title="Not wired yet">Help</button>
     </div>
+    <h1 class="brand">limegle</h1>
+    <div class="right-id">user-<span id="userId">—</span></div>
+  </header>
 
+  <main class="layout">
+    <section class="video-col">
+      <!-- Remote (big / primary) -->
+      <div class="tile" id="remoteTile">
+        <video id="remoteVideo" autoplay playsinline></video>
+        <div class="overlay top-right">
+          <!-- Indicators only (read-only) -->
+          <button class="icon pill" id="remoteMic" disabled title="Remote mic">
+            <span>🎙</span>
+          </button>
+          <button class="icon pill" id="remoteCam" disabled title="Remote camera">
+            <span>📷</span>
+          </button>
+        </div>
+        <div class="ribbon" id="remoteRibbon">Waiting for a partner…</div>
+      </div>
+
+      <!-- Local (secondary) -->
+      <div class="tile" id="localTile">
+        <video id="localVideo" autoplay playsinline muted></video>
+        <div class="overlay top-right">
+          <button class="icon pill" id="toggleMic" title="Toggle microphone (you)">
+            <span id="micEmoji">🎙</span>
+          </button>
+          <button class="icon pill" id="toggleCam" title="Toggle camera (you)">
+            <span id="camEmoji">📷</span>
+          </button>
+        </div>
+        <div class="ribbon" id="localRibbon">You</div>
+      </div>
+    </section>
+
+    <aside class="chat-pane">
+      <div class="chat-header">Text chat</div>
+      <div id="chatLog" class="chat-log"></div>
+      <form id="chatForm" class="chat-input" autocomplete="off">
+        <input id="chatText" placeholder="Type a message…" />
+        <button class="btn btn-primary" type="submit">Send</button>
+      </form>
+    </aside>
+  </main>
+
+  <!-- Env (fill in, see env.example.js) -->
+  <script src="/env.js"></script>
+  <!-- Supabase -->
+  <script src="https://unpkg.com/@supabase/supabase-js@2.45.4/dist/umd/supabase.js"></script>
+  <!-- App -->
+  <script src="/app.js"></script>
 </body>
-
 </html>
