--- a/public/index.html
+++ b/public/index.html
@@ -79,9 +79,9 @@
 <body>
   <header class="topbar">
     <div class="center-group">
-      <a href="#" class="link">call</a>
+      <a href="#" class="link" id="callLink">call</a>
       <h1 class="brand">limegle</h1>
-      <a href="#" class="link">help</a>
+      <a href="#" class="link" id="helpLink">help</a>
     </div>
     <div class="right-id">user id: <span id="userId">—</span></div>
   </header>
