--- a/public/index.html
+++ b/public/index.html
@@ -9,70 +9,77 @@
   <script src="/env.js"></script>
   <script src="https://unpkg.com/@supabase/supabase-js@2.45.4/dist/umd/supabase.js"></script>
   <style>
-    /* minimal, black & white */
-    html,body{margin:0;padding:0}
-    .topbar{display:grid;grid-template-columns:1fr auto 1fr;align-items:center;padding:8px 10px;border-bottom:1px solid #000}
-    .center-group{grid-column:2;display:flex;align-items:center;gap:8px}
-    .brand{margin:0;font-size:28px;font-weight:bold;text-transform:lowercase}
-    .link{color:#000;text-decoration:underline;text-transform:lowercase}
-    .right-id{grid-column:3;justify-self:end}
-    .layout{display:grid;grid-template-columns:1fr 320px;gap:10px;padding:10px}
-    @media (max-width:900px){.layout{grid-template-columns:1fr}}
-    .section{border:1px solid #000;padding:8px}
-    video{width:100%;height:auto;background:#000}
-    .controls{margin:6px 0;display:flex;gap:6px}
-    .chat-log{height:240px;overflow:auto;border:1px solid #000;padding:6px}
-    .msg{display:flex;gap:6px;margin:4px 0}
-    .msg.system{justify-content:center}
-    .msg.system .who{display:none}
-    .chat-input{display:flex;gap:6px;margin-top:6px}
-    .join-cta{position:fixed;inset:0;display:flex;align-items:center;justify-content:center;background:rgba(0,0,0,.1)}
-    .join-bar{width:100%;max-width:900px;padding:10px 12px;border:1px solid #000;background:#fff;text-align:center;cursor:pointer}
+    html,body { margin:0; height:100%; }
+    body { display:flex; flex-direction:column; font-family:monospace; }
+
+    header { display:flex; justify-content:center; gap:20px; padding:4px; border-bottom:1px solid #000; }
+    header .right-id { position:absolute; right:8px; top:4px; font-size:12px; }
+
+    main { flex:1; display:grid; grid-template-columns:2fr 1fr; height:100%; }
+    section.videos { display:grid; grid-template-rows:1fr 1fr; border-right:1px solid #000; }
+    .box { position:relative; border-bottom:1px solid #000; display:flex; flex-direction:column; }
+    video { flex:1; width:100%; background:#ccc url('https://i.stack.imgur.com/kOnzy.gif') center center no-repeat; background-size:40px; }
+    .label { position:absolute; left:4px; top:2px; font-size:12px; background:#fff; }
+    .ribbon { position:absolute; left:4px; bottom:2px; font-size:12px; }
+    .controls { position:absolute; right:4px; top:4px; display:flex; gap:4px; }
+    button { font-size:12px; }
+
+    aside.chat { display:flex; flex-direction:column; }
+    .chat-header { border-bottom:1px solid #000; padding:2px; font-weight:bold; }
+    .chat-log { flex:1; overflow:auto; padding:4px; }
+    .chat-input { display:flex; border-top:1px solid #000; }
+    .chat-input input { flex:1; }
+
+    /* Join overlay */
+    #joinCta { position:fixed; inset:0; display:flex; align-items:center; justify-content:center; background:rgba(255,255,255,0.8); }
+    #joinCta .box { border:1px solid #000; padding:20px; background:#fff; cursor:pointer; text-align:center; }
   </style>
 </head>
 <body>
-  <header class="topbar">
-    <div></div>
-    <div class="center-group">
-      <a href="#" class="link" id="callLink">call</a>
-      <h1 class="brand">limegle</h1>
-      <a href="#" class="link" id="helpLink">help</a>
-    </div>
+  <header>
+    <a href="#">call</a>
+    <h1>limegle</h1>
+    <a href="#">help</a>
     <div class="right-id">user id: <span id="userId">—</span></div>
   </header>
 
-  <main class="layout">
-    <section class="section">
-      <div>person</div>
-      <video id="remoteVideo" autoplay playsinline></video>
-      <div id="remoteState">person (mic ?, camera ?)</div>
-
-      <hr>
-
-      <div>you</div>
-      <video id="localVideo" autoplay playsinline muted></video>
-      <div class="controls">
-        <button id="toggleMic">toggle mic</button>
-        <button id="toggleCam">toggle camera</button>
-        <button id="skipBtn">skip</button>
+  <main>
+    <section class="videos">
+      <div class="box" id="remoteTile">
+        <span class="label">person</span>
+        <video id="remoteVideo" autoplay playsinline></video>
+        <div class="controls">
+          <button id="remoteMic" disabled>mic</button>
+          <button id="remoteCam" disabled>cam</button>
+          <button id="skipBtn">skip</button>
+        </div>
+        <div class="ribbon" id="remoteRibbon"></div>
+      </div>
+      <div class="box" id="localTile">
+        <span class="label">you</span>
+        <video id="localVideo" autoplay playsinline muted></video>
+        <div class="controls">
+          <button id="toggleMic">mic</button>
+          <button id="toggleCam">cam</button>
+        </div>
+        <div class="ribbon" id="localRibbon"></div>
       </div>
     </section>
 
-    <aside class="section">
-      <div>text chat</div>
+    <aside class="chat">
+      <div class="chat-header">text chat</div>
       <div id="chatLog" class="chat-log"></div>
-      <form id="chatForm" class="chat-input" autocomplete="off">
+      <form id="chatForm" class="chat-input">
         <input id="chatText" placeholder="type a message..." />
         <button type="submit">send</button>
       </form>
     </aside>
   </main>
 
-  <!-- join CTA -->
-  <div id="joinCta" class="join-cta" role="button" tabindex="0">
-    <div class="join-bar">
+  <div id="joinCta">
+    <div class="box">
       TAP TO JOIN PUBLIC CHAT
-      <div>press here to call</div>
+      <div style="font-size:12px">press here to call</div>
     </div>
   </div>
 
